[package]
name = "pms-7003"
version = "0.3.0"
authors = ["Grzegorz Bartoszek <grze.bartoszek@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/g-bartoszek/pms-7003"
description = "Rust interface for PMS 7003 air quality sensor"

[dependencies]
embedded-hal = "0.2.3"
scroll = { version = "0.11.0", default_features = false }
nb = "1"
embedded-io = { version = "0.6.1", optional = true }
embedded-io-async = { version = "0.5.0", optional = true }
defmt = { version = "0.3", optional = true }

[features]
async = ["dep:embedded-io", "dep:embedded-io-async", "dep:defmt", "embedded-io-async/defmt-03"]

[dev-dependencies]
linux-embedded-hal = "0.3.0"
embedded-hal-mock = "0.9.0"
tokio-test = "*"
heapless = "0.8.0"